Add W32-only function gpgrt_w32_override_locale.

* src/w32-gettext.c (struct override_locale): new.
(my_nl_locale_name): Take care of that.
(gpgrt_w32_override_locale): New.
* src/gpg-error.def.in: Add gpgrt_w32_override_locale.
* src/gpg-error.c: New command --locale for Windows.
--

GnuPG-bug-id: 3733
Signed-off-by: Werner Koch <wk@gnupg.org>