src/w32-add.h
@@ -37,6 +37,10 @@ int _gpg_w32_gettext_use_utf8 (int value);
 # define gettext_use_utf8(a) _gpg_w32_gettext_use_utf8 (a)
 #endif /*GPG_ERR_ENABLE_GETTEXT_MACROS*/
 
+/* Force the use of the locale NAME or if NAME is NULL the one derived
+ * from LANGID.  This function must be used early and is not thread-safe. */
+void gpgrt_w32_override_locale (const char *name, unsigned short langid);
+
 
 /* A simple iconv implementation w/o the need for an extra DLL.  */
 struct _gpgrt_w32_iconv_s;
